@@ -1,0 +1,5 @@
+languagedir = @PACKAGE_DATA_DIR@/template/language
+
+language_DATA = c.xml
+
+EXTRA_DIST= $(language_DATA)
