@@ -1,0 +1,5 @@
+libdir = @PACKAGE_DATA_DIR@/template/library
+
+lib_DATA = glib.xml
+
+EXTRA_DIST= $(lib_DATA)
