@@ -1,0 +1,5 @@
+terminaldir = @PACKAGE_DATA_DIR@/template/project/terminal
+
+terminal_DATA = terminal.xml
+
+EXTRA_DIST= $(terminal_DATA)
