@@ -1,0 +1,5 @@
+textdir = @PACKAGE_DATA_DIR@/template/text
+
+text_DATA = gpl-c.xml
+
+EXTRA_DIST= $(text_DATA)
